# epitech-image-depressor

./: Cargo.toml  README.md
src/: convert.rs  main.rs  opts.rs
src/convertor/: img_to_txt.rs  mod.rs  txt_to_img.rs
