[package]
name = "imagecompressor-converter"
version = "0.1.0"
authors = ["Arcarox <arcarox@localhost.localdomain>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
image = "0.23.14"
regex = "1.4.5"
lazy_static = "1.4.0"
nom = "6.1.2"
